[gd_scene load_steps=33 format=3 uid="uid://dluuxm5pr46m2"]

[ext_resource type="Script" uid="uid://l5v31ijntsby" path="res://avatar creation/scenes/login_teacher.gd" id="1_greu1"]
[ext_resource type="Texture2D" uid="uid://cwthy3ftbrnel" path="res://avatar creation/ui/Cosmic Login Screen Design.png" id="2_vxara"]
[ext_resource type="FontFile" uid="uid://cxmm3y2mpwlja" path="res://avatar creation/fonts/PressStart2P.ttf" id="4_aq5ww"]
[ext_resource type="Texture2D" uid="uid://f15kn3227yc4" path="res://avatar creation/ui/Sign-Up button.png" id="5_fn5wl"]
[ext_resource type="FontFile" uid="uid://c1wcxniugtqaa" path="res://avatar creation/fonts/montserrat.regular.ttf" id="5_ve0si"]
[ext_resource type="StyleBox" uid="uid://dm3ckbx1qbprs" path="res://student management/Button_shadow.tres" id="6_6ewfk"]
[ext_resource type="PackedScene" uid="uid://dgdykjx4l6djc" path="res://avatar creation/scenes/OnScreenKeyboard.tscn" id="7_tsvva"]
[ext_resource type="Texture2D" uid="uid://bbmpvgp0kr3mw" path="res://avatar creation/ui/Login button.png" id="8_aq5ww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ve0si"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ewfk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxara"]
bg_color = Color(0.101960786, 0.16470589, 0.6, 0.5803922)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c8ya6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fsvu3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p1vn4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5sgb4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6xasw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a6nq7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j0glc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_40a4t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlkrk"]
bg_color = Color(0.986752, 0.986752, 0.986752, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[sub_resource type="Theme" id="Theme_db2e0"]
Button/styles/normal = ExtResource("6_6ewfk")
LineEdit/colors/caret_color = Color(1, 1, 1, 1)
LineEdit/colors/clear_button_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/clear_button_color_pressed = Color(1, 1, 1, 1)
LineEdit/colors/font_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/font_outline_color = Color(0, 0, 0, 1)
LineEdit/colors/font_placeholder_color = Color(0.875, 0.875, 0.875, 0.6)
LineEdit/colors/font_selected_color = Color(1, 1, 1, 1)
LineEdit/colors/font_uneditable_color = Color(0.875, 0.875, 0.875, 0.5)
LineEdit/colors/selection_color = Color(0.5, 0.5, 0.5, 1)
LineEdit/styles/normal = SubResource("StyleBoxFlat_rlkrk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b576u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7rgq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aq5ww"]
bg_color = Color(0.08627451, 0.12156863, 0.6, 0.5803922)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fn5wl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p3w2g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60uvs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hajdp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kjooc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_785mm"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq0ol"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivdth"]

[node name="AvatarCreation" type="Node2D"]
script = ExtResource("1_greu1")
metadata/_edit_vertical_guides_ = [835.0]

[node name="ColorRect3" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1600, 900)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1600.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.027451, 0.215686, 1)

[node name="ColorRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1600, 900)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -473.0
offset_top = -127.0
offset_right = 2018.0
offset_bottom = 990.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vxara")
expand_mode = 2
stretch_mode = 5

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.13127258
anchor_top = 0.09489705
anchor_right = 0.13127258
anchor_bottom = 0.09489705
offset_left = 286.0
offset_top = 501.0
offset_right = 1644.0
offset_bottom = 902.0
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(125, 22)
offset_left = 841.0
offset_top = 262.0
offset_right = 1059.0
offset_bottom = 292.0
theme_override_colors/default_color = Color(1, 0.866667, 0.537255, 1)
theme_override_fonts/normal_font = ExtResource("4_aq5ww")
theme_override_font_sizes/normal_font_size = 24
text = "Password:"

[node name="AgeLabel" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(109, 22)
offset_left = 100.0
offset_top = 264.0
offset_right = 346.0
offset_bottom = 293.0
theme_override_colors/default_color = Color(1, 0.866667, 0.537255, 1)
theme_override_fonts/normal_font = ExtResource("4_aq5ww")
theme_override_font_sizes/normal_font_size = 24
text = "User Name:"

[node name="SaveButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 888.0
offset_top = 314.0
offset_right = 1279.0
offset_bottom = 499.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_ve0si")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ve0si")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6ewfk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vxara")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_c8ya6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fsvu3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_p1vn4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5sgb4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6xasw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_a6nq7")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_j0glc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_40a4t")
icon = ExtResource("5_fn5wl")
icon_alignment = 1
expand_icon = true

[node name="NameEdit" type="LineEdit" parent="."]
offset_left = 369.0
offset_top = 263.0
offset_right = 756.0
offset_bottom = 298.0
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_db2e0")
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Password" type="LineEdit" parent="."]
offset_left = 1074.0
offset_top = 257.0
offset_right = 1461.0
offset_bottom = 292.0
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_db2e0")
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="OnScreenKeyboard" parent="." instance=ExtResource("7_tsvva")]
offset_left = 818.0
offset_top = 878.0
offset_right = 818.0
offset_bottom = 878.0

[node name="StudentManager" type="Node2D" parent="."]

[node name="SaveButton2" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 269.0
offset_top = 288.0
offset_right = 687.0
offset_bottom = 510.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ve0si")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_b576u")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_p7rgq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aq5ww")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_fn5wl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p3w2g")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_60uvs")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hajdp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kjooc")
theme_override_styles/disabled = SubResource("StyleBoxFlat_785mm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_fq0ol")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ivdth")
icon = ExtResource("8_aq5ww")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="SaveButton2" to="." method="_on_save_button_2_pressed"]
